# nftytool

./: FAQ  INSTALL  Makefile.in  README  TODO  cfgfile.c  cfgfile.h  config.h.in  configure  configure.in  nftytool.c  nftytool.conf  plugins.c  plugins.h
include/: hexfile.h  infinity.h  plugin.h
lib/: Makefile.in  libinfinity_avr.c  libinfinity_eeprom.c  libinfinity_hexfile.c  libinfinity_infinity.c  libinfinity_pic.c
plugins/: Makefile.in  goldcard.c  goldcard.h  led.c  phoenix.c  wafercard.c  wafercard.h
